Centered jumbotron text on smaller devices, fixed jumbotron text size and size of background depending on screen size in css/style.css.

--- a/css/style.css
+++ b/css/style.css
@@ -13,28 +13,38 @@ p {
 }
 .jumbotron {
     min-width: 100%;
-    height: 400px;
     background: url('../img/family.jpg') right center;
     background-origin: content-box;
     margin-top: 70px;
     background-repeat: no-repeat;
 }
-@media (max-width:690px) {
+@media (max-width: 767px) {
   .jumbotron {
       background-image: none;
+      text-align: center;
+      height: inherit;
   }
 }
 @media (min-width: 768px) {
+    .jumbotron {
+        text-align: none;
+        background-size: 200px;
+        height: 325px;
+    }
     .jumbotron h1 {
-        font-size: 2em;
+        font-size: 3em;
     }
     .jumbotron h2 {
-        font-size: 1.5em;
+        font-size: 2em;
     }
 }
 @media (min-width: 992px) {
+    .jumbotron {
+      height: 400px;
+      background-size: inherit;
+    }
     .jumbotron h1 {
-        font-size: 3em;
+        font-size: 4em;
     }
     .jumbotron h2 {
         font-size: 2em;
